syntax = "proto3";

option csharp_namespace = "GlowingNews.IdentityServer.Protos";

service AuthorizationService {

	rpc ValidateJwtBearerToken (ValidateTokenRequest) returns (ValidateTokenResponse);	  

}


message ValidateTokenRequest {
	string Token = 1;
}

message ValidateTokenResponse {
	bool valid = 1;
    string Roles = 2;
}
